# OTUS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  version.h.in
.github/workflows/: release.yml
inc/: lib.hpp
lib/: CMakeLists.txt  ip_filter.cpp  ip_filter.hpp
src/: lib.cpp  main.cpp
tests/: CMakeLists.txt  test_version.cpp  test_version_gtest.cpp  tests.cpp
